clusters/my-cluster/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: couple-games
  labels:
    app: couple-games
spec:
  type: ClusterIP
  selector:
    app: couple-games
  ports:
    - name: http
      port: 8080
      targetPort: 8080
